# vp

./: CMakeLists.txt  README.md
sources/: CMakeLists.txt  config.h  cpu.cxx  cpu.h  filter.h  regs.asm  uf.cxx  uf.h  vp.cxx  vp.h.in  yregs.asm
sources/addgrain/: CMakeLists.txt  addgrain.cxx  addgrain.h
sources/cvtcolor/: CMakeLists.txt  cvtcolor-c.c  cvtcolor.cxx  cvtcolor.h  lab2yuv_709_32f-ivb.asm  lab2yuv_f32_avx512-a.asm  lab2yuv_f32_ivb-a.asm  lab2yuv_i16_avx.cxx  yuv2lab_709_32f-ivb.asm  yuv2lab_f32_ivb-a.asm  yuv2lab_i16_avx.cxx
sources/dfttest/: CMakeLists.txt  dfttest.cxx  dfttest.h  dfttest_avx.cxx
sources/nnedi/: CMakeLists.txt  nnedi.cxx  nnedi.h  nnedi_4x12x16_ivb-a.asm  nnedi_q1.cl  nnedi_q1_cl.h
sources/raws/: CMakeLists.txt  raws.cxx
