unset(sources CACHE)
unset(avx_sources CACHE)
unset(etc_sources CACHE)

add_to_sources("vp.cxx;uf.cxx;uf.h;filter.h;cpu.cxx;cpu.h;config.h;todo.txt")

add_subdirectory(addgrain)
add_subdirectory(cvtcolor)
add_subdirectory(dfttest)
add_subdirectory(raws)
add_subdirectory(nnedi)

if(MSVC)
 configure_file(vp.h.in ${CMAKE_BINARY_DIR}/generated/vp.h)
 add_to_sources(${CMAKE_BINARY_DIR}/generated/vp.h)
 group("${sources};${avx_sources};${etc_sources};")
endif()

if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
 set_compile_options("${avx_sources}" "-mavx;-maes;-mf16c")
else()
 set_compile_options("${avx_sources}" "/arch:AVX")
endif()

add_library(vp SHARED ${sources} ${avx_sources} ${etc_sources})

set_target_properties(vp PROPERTIES CXX_STANDARD 17 VISIBILITY_INLINES_HIDDEN 1 CXX_VISIBILITY_PRESET hidden C_VISIBILITY_PRESET hidden)

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_BINARY_DIR}/generated)
target_link_directories(vp PUBLIC ${CMAKE_LIBRARY_PATH})
if(UNIX)
 target_link_libraries(vp ${XXHASH_LIB} ${LZ4_LIB} ${FFTW_LIB} ${OPENCL_LIB})
endif()

if(VAPOURSYNTH_INCLUDE_DIR)
 include_directories(${VAPOURSYNTH_INCLUDE_DIR})
endif()
if(XXHASH_INCLUDE_DIR)
 include_directories(${XXHASH_INCLUDE_DIR})
endif()
if(LZ4_INCLUDE_DIR)
 include_directories(${LZ4_INCLUDE_DIR})
endif()
if(FFTW_INCLUDE_DIR)
 include_directories(${FFTW_INCLUDE_DIR})
endif()
if(VCL_INCLUDE_DIR)
 include_directories(${VCL_INCLUDE_DIR})
endif()
